<resources>

    <string name="app_name">BMI</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Lab 6.5 - BMI</string>
    <string name="gender">性別：</string>
    <string name="height">身高(cm)：</string>
    <string name="weight">體重(kg)：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="check">計算BMI值</string>
    <string name="result">BMI值為</string>

</resources>